Adding to index

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 
                 <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-1">Maria Paula Linares</h1>
-                <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-2">Maria Paula Linares</h1>
+                <!-- <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-2">Maria Paula Linares</h1>
                 <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-3">Maria Paula Linares</h1>
                 <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-4">Maria Paula Linares</h1>
-                <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-5">Maria Paula Linares</h1>
+                <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-5">Maria Paula Linares</h1> -->
 
                 <!-- Icon Divider-->
                 <div class="divider-custom ">
@@ -77,33 +77,35 @@
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
-                    <!-- Portfolio Item 1-->
+                  <!-- Portfolio Item Text 911-->
+                  <div class="col-md-6 col-lg-4 mb-5">
+                      <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                              <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                          </div>
+                          <img class="img-fluid" src="assets/img/portfolio/texthead.png" alt="" />
+                      </div>
+                  </div>
+
+                    <!-- Portfolio Item1 MakeupTrends-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/brows.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/makeupTrends.png" alt="" />
                         </div>
                     </div>
-                    <!-- Portfolio Item 2 Golden Gate Park-->
+                    <!-- Portfolio Item2 Golden Gate Park-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/GoldenGateParkmockup.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/ggg2.png" alt="" />
                         </div>
                     </div>
-                    <!-- Portfolio Item 3-->
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="" />
-                        </div>
-                    </div>
+
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
@@ -321,7 +323,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 3-->
+        <!-- Portfolio Modal 3 Text to 911-->
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content">
@@ -333,7 +335,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">text911.info</h2>
+                                    <a href = "https://text911.info/"><h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">text911.info</h2></a>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
