Adding Text for Projects

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 <h1 class="masthead-heading text-uppercase mb-0 mp-type mp-5">Maria Paula Linares</h1> -->
 
                 <!-- Icon Divider-->
-                <div class="divider-custom ">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line first-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star first-star"></i></div>
+                    <div class="divider-custom-line first-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Front End Developer</p>
@@ -107,14 +107,14 @@
                     </div>
 
                     <!-- Portfolio Item 4-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+                    <!-- <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/game.png" alt="" />
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
@@ -229,10 +229,10 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> -->
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a> -->
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
@@ -277,7 +277,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/makeupTrends.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">The Evolution of Makeup Trends is a set of three p5.js interactive canvases showcasing the change in makeup trends from the 1980’s to the 2010’s. Each canvas focuses on one specific makeup evolution and the celebrities that brought it to life.</p>
+                                    <p class="mb-5"><a href = "https://linaresmp.github.io/TheEvolutionofMakeupTrends/">The Evolution of Makeup Trends</a> is a set of three p5.js interactive canvases showcasing the change in makeup trends from the 1980’s to the 2010’s. Each canvas focuses on one specific makeup evolution and the celebrities that brought it to life.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -301,7 +301,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">An Day in Golden Gate Park</h2>
+                                    <a href = "https://linaresmp.github.io/ADayInGoldenGatePark/"><h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">An Day in Golden Gate Park</h2></a>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -311,7 +311,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/GoldenGatePark.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">A Day In Golden Gate Park is an interactive web experience that celebrates the famous park and three distinct park attractions—built using p5.play, html and css. The first game allows users to explore the conservatory and learn about various flowers. The second game gives the user an opportunity to test out their archery skills. Finally, the third game will take the user through Stow Lake where they can ride a bike along the water. The visuals were inspired by designer Michael Schwab's original national park's identity system.</p>
+                                    <p class="mb-5"><a href = "https://linaresmp.github.io/ADayInGoldenGatePark/">A Day In Golden Gate Park</a> is an interactive web experience that celebrates the famous park and three distinct park attractions—built using p5.play, html and css. The first game allows users to explore the conservatory and learn about various flowers. The second game gives the user an opportunity to test out their archery skills. Finally, the third game will take the user through Stow Lake where they can ride a bike along the water. The visuals were inspired by designer Michael Schwab's original national park's identity system.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -345,7 +345,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/text911img.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5"> This Project was made for AccesSOS. Built a Map that visualizes Text to 911 capability throughout the United States. My Team gathered FCC data and loaded it into a MongoDB Collection. Implemented an API that is used by the front end of our map to showcase what counties have text to 911 capability. The Map is built using Google Maps API which allowed us to implement a search feature for users to find addresses or counties on the map. The site is deployed and hosted on text911.info. Finally, The styling of the website was done by me using wireframes made by the designer.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -358,7 +358,7 @@
             </div>
         </div>
         <!-- Portfolio Modal 4-->
-        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
+        <!-- <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content">
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
@@ -367,19 +367,19 @@
                     <div class="modal-body text-center">
                         <div class="container">
                             <div class="row justify-content-center">
-                                <div class="col-lg-8">
+                                <div class="col-lg-8"> -->
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Controller</h2>
+                                    <!-- <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Controller</h2> -->
                                     <!-- Icon Divider-->
-                                    <div class="divider-custom">
+                                    <!-- <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
-                                    </div>
+                                    </div> -->
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                                    <!-- <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" /> -->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <!-- <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -390,7 +390,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Portfolio Modal 5-->
         <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
