--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <!-- Footer Location-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4 location">Location</h4>
-                        <p class="lead mb-0">
+                        <p class="lead mb-0 text-center">
                             Sacramento, CA
                             <br />
                             Open to relocation
