--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
   <h1 class="project-header">Projects</h1>
-  <img id = "projectdiamond" src = "img/addons/Asset 9.png" />
+  <!-- <img id = "projectdiamond" src = "img/addons/Asset 9.png" /> -->
   <div id="project-flex">
 
 
